新增富文本编辑器

--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+
+    <script src=<%= htmlWebpackPlugin.options.path %>static/jquery.min.js></script>
+	<script src=<%= htmlWebpackPlugin.options.path %>static/tinymce1.3/tinymce.min.js></script>
   </body>
 </html>
